testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment18.errors.txt
a.js(4,10): error TS2339: Property 'p' does not exist on type '{ q: number; }'.
a.js(7,10): error TS2339: Property 'p' does not exist on type '{ q: number; }'.
a.js(9,12): error TS2339: Property 'p' does not exist on type '{ q: number; }'.


==== a.js (3 errors) ====
    var GLOBSTAR = m.GLOBSTAR = {}
    function m() {
    }
    GLOBSTAR.p = 1
             ~
!!! error TS2339: Property 'p' does not exist on type '{ q: number; }'.
    m.GLOBSTAR.q = 2
    
    GLOBSTAR.p
             ~
!!! error TS2339: Property 'p' does not exist on type '{ q: number; }'.
    GLOBSTAR.q
    m.GLOBSTAR.p
               ~
!!! error TS2339: Property 'p' does not exist on type '{ q: number; }'.
    m.GLOBSTAR.q
    